fix too short bg on desktop

--- a/src/public/news.css
+++ b/src/public/news.css
@@ -117,10 +117,11 @@ button, a, .interaction-element {
 }
 html {
   background-color: #f9f9f9;
-  height: 100dvh;
+  min-height: 100%;
 }
 body {
-  height: 100dvh;
+  min-height: 100dvh;
+  background-color: #f9f9f9;
      margin: 0;
      font-family: var(--font-family);
      font-size:10pt;
